--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "leaflet": "^1.7.1",
+    "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/numeral": "^2.0.5",
     "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.7"
   }
